...
                            <constraint firstItem="9pQ-UP-m7w" firstAttribute="top" secondItem="7gM-yo-Sny" secondAttribute="bottom" constant="1" id="VrS-15-D6a"/>
                            <constraint firstAttribute="trailing" secondItem="7gM-yo-Sny" secondAttribute="trailing" id="r4D-CB-6Z2"/>
                            <constraint firstItem="9pQ-UP-m7w" firstAttribute="leading" secondItem="9Td-Nn-PXZ" secondAttribute="leading" constant="-1" id="ujp-Fh-NhY"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="9Td-Nn-PXZ"/>
                    </view>
                    <navigationItem key="navigationItem" title="Plans List" id="JSw-hy-QQR">
                        <barButtonItem key="leftBarButtonItem" title="Logout" id="dP8-n5-kad">
                            <connections>
                                <action selector="logoutBtnTapped:" destination="FlM-1d-gso" id="9aD-Zg-4sh"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="pp9-wS-t1w">
...
            <point key="canvasLocation" x="-566" y="257"/>
        </scene>
        <!--Plans-->
        <scene sceneID="xue-HA-QHx">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="q2Q-gS-K4r" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Plans" image="home-icon" id="Bua-BZ-gfj"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="nKP-dI-qZh">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfz-qL-85P">
                                <rect key="frame" x="11" y="59" width="74.5" height="23"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Day/Month/Year" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ASq-2K-wzw">
                                <rect key="frame" x="106" y="135" width="288" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter new plan here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cSl-qD-fCB">
                                <rect key="frame" x="106" y="10" width="288" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7N-g6-Z8S">
...
