...
		//navigationItem.largeTitleDisplayMode = .always
		//navigationController?.navigationBar.prefersLargeTitles = true
	}
	
	
	private func setUpUI(){
		self.title = "New Plan"
		//navigationController?.navigationBar.prefersLargeTitles = false
		txtFieldNewPlanTitle.delegate = self
		txtFldDeadline.delegate = self
		txtFieldNewPlanTitle.becomeFirstResponder()
		
		showDatePicker()
...
		datePicker.minimumDate = currentDate
		datePicker.date = currentDate
		
		//ToolBar
		let toolbar = UIToolbar();
		toolbar.sizeToFit()
		let doneButton = UIBarButtonItem(title: "Done", style: .plain, target: self, action: #selector(donedatePicker));
		let spaceButton = UIBarButtonItem(barButtonSystemItem: UIBarButtonItem.SystemItem.flexibleSpace, target: nil, action: nil)
		let cancelButton = UIBarButtonItem(title: "Cancel", style: .plain, target: self, action: #selector(cancelDatePicker));
		
		toolbar.setItems([doneButton,spaceButton,cancelButton], animated: false)
		
		txtFldDeadline.inputAccessoryView = toolbar
...
